@@ -1,3 +1,8 @@
+1999-02-34  Eckehard Berns  <eb@berns.i-s-o.net>
+
+	* gnome-help.c (gnome_help_file_find_file): revert the stripping of '#'
+	anchors after the correct file is found.
+
 1999-02-24  Felix Bellaby <felix@pooh.u-net.com>
 
 	* gnome-exec.c (gnome_execute_async_with_env_fds): clean up fds.
